Bug 39577 - [bisected SNB]oglc multicontext(advanced.sharing.program.deleteInOriginal) fails
Summary: [bisected SNB]oglc multicontext(advanced.sharing.program.deleteInOriginal) fails
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: All Linux (All)
: high normal
Assignee: Eric Anholt
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-26 20:19 UTC by fangxun
Modified: 2011-09-25 22:19 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description fangxun 2011-07-26 20:19:38 UTC
System Environment:
--------------------------
Arch:           i386
Platform:       huronriver 
Libdrm:         (master)2.4.26-2-gce317a6d09bb93cff73703b06e5a5bc3cc0b1c6a
Mesa:           (master)b189d1635d89cd7d900e8f9a5eed88d7dc0b46cb
Xserver:       (master)xorg-server-1.10.99.901-115-g73864a87aacbce85b520ccaa6e360b82c0e99716
Xf86_video_intel: (master)2.15.0-206-g1b9e82b4b59dd50c1b057f58d71d5c04dcc648a7
Kernel_unstable:  (drm-intel-next)df7976797fa9af161690dbf4dee81ed92cdc150f


Bug detailed description:
-------------------------
It's regression and only happens on sandybridge. 
multicontext(advanced.sharing.deleteInShared.program) and multicontext(advanced.sharing.program.deleteObjectInUse) also fail due to the same cause. Bisect find a0e5affb22da50aeb30262f5ba0912b059d858ea is the first bad commit.
commit a0e5affb22da50aeb30262f5ba0912b059d858ea
Author:     Eric Anholt <eric@anholt.net>
AuthorDate: Thu May 19 11:02:14 2011 -0700
Commit:     Eric Anholt <eric@anholt.net>
CommitDate: Mon Jul 25 13:47:18 2011 -0700

    i965: Use 3D clears on gen6+ to avoid inter-ring synchronization.

    Improves firefox-talos-gfx around 5%.


Reproduce steps:
----------------
1. start X
2. ./oglconform -z -s -suite all -v 2 -D 115 -test multicontext advanced.sharing.program.deleteInOriginal
Comment 1 Gordon Jin 2011-09-19 21:58:58 UTC
Eric/Ian, comments?
Comment 2 Eric Anholt 2011-09-20 16:25:47 UTC
Patches out for review
Comment 3 Eric Anholt 2011-09-22 16:52:42 UTC
commit bda09aeb20f183407038672318c8f657feb9fe54
Author: Eric Anholt <eric@anholt.net>
Date:   Tue Sep 20 16:21:13 2011 -0700

    clear-with-deleted: New test for a metaops refcounting bug.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=39577
    Reviewed-by: Ian Romanick <ian.d.romanick@intel.com>

commit a140c3e7837725bfa610c9f842a95201b661c773
Author: Eric Anholt <eric@anholt.net>
Date:   Tue Sep 20 16:23:57 2011 -0700

    meta: Don't hang on to program refcounts after metaops are done.
    
    Fixes piglit ARB_shader_objects/clear-with-deleted.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=39577
    Reviewed-by: Brian Paul <brianp@vmware.com>
Comment 4 fangxun 2011-09-25 22:19:08 UTC
Verified with Mesa master commit 06ae4a62b1b3c668a5b50661df25d87f8c2679ef.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.